--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -40,7 +40,42 @@
             <div id="bigCont">
                 <div id="cont">
                     <div id="main">
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/sabertooth-ICON.png" alt="Project Image or Icon" />
+                            </div>
 
+                            <div class="projectSum">
+                                <h2>Sabertooth</h2>
+
+                                <p>
+                                    Sabertooth is a folder organizer, which groups files and folders (you can choose what to group) in a folder, or selected
+                                    folders. It can automatically organize selected folders every 5 or more minutes.
+                                </p>
+                            </div>
+
+                            <div>
+                                <img src="" alt="Screenshot" />
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/paws.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Paws</h2>
+
+                                <p>
+                                    Paws is a FTP server explorer and a backup tool. You can explore files and folders in a FTP server, edit, copy, paste, move or search them. You can synchronize folders on your computer with another folder on FTP server. You can also stream videos (and subtitles) on FTP server if you have VLC Player. 
+                                </p>
+                            </div>
+
+                            <div>
+                                <img src="" alt="Screenshot" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
