--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-image: url('../Images/projects-wallpaper.jpg')">
+<html lang="en" >
 
 <head>
     <meta charset="utf-8">
@@ -52,10 +53,15 @@
                                     Sabertooth is a folder organizer, which groups files and folders (you can choose what to group) in a folder, or selected
                                     folders. It can automatically organize selected folders every 5 or more minutes.
                                 </p>
+
+                                <a href="https://github.com/recoskyler/Sabertooth" target="_blank">View/Download On GitHub</a>
                             </div>
 
-                            <div>
-                                <img src="" alt="Screenshot" />
+                            <div class="projectSSC">
+                                <a href="../Images/sabertooth_c1.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c1.png" alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c2.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c2.png" alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c3.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c3.png" alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c4.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c4.png" alt="Screenshot" /></a>
                             </div>
                         </div>
 
@@ -72,8 +78,7 @@
                                 </p>
                             </div>
 
-                            <div>
-                                <img src="" alt="Screenshot" />
+                            <div class="projectSSC">
                             </div>
                         </div>
                     </div>
