--- a/Pages/about.html
+++ b/Pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-image: url('../Images/about-wallpaper.jpg')">
 
 <head>
     <meta charset="utf-8">
