--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" style="background-image: url('../Images/contact-wallpaper.jpg')">
 
 <head>
     <meta charset="utf-8">
