--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="background-image: url('../Images/projects-wallpaper.jpg')">
-<html lang="en" >
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -58,10 +58,14 @@
                             </div>
 
                             <div class="projectSSC">
-                                <a href="../Images/sabertooth_c1.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c1.png" alt="Screenshot" /></a>
-                                <a href="../Images/sabertooth_c2.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c2.png" alt="Screenshot" /></a>
-                                <a href="../Images/sabertooth_c3.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c3.png" alt="Screenshot" /></a>
-                                <a href="../Images/sabertooth_c4.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c4.png" alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c1.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c1.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c2.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c2.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c3.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c3.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/sabertooth_c4.png" target="_blank"><img class="projectSS" src="../Images/sabertooth_c4.png"
+                                        alt="Screenshot" /></a>
                             </div>
                         </div>
 
@@ -74,11 +78,37 @@
                                 <h2>Paws</h2>
 
                                 <p>
-                                    Paws is a FTP server explorer and a backup tool. You can explore files and folders in a FTP server, edit, copy, paste, move or search them. You can synchronize folders on your computer with another folder on FTP server. You can also stream videos (and subtitles) on FTP server if you have VLC Player. 
+                                    Paws is a FTP server explorer and a backup tool. You can explore files and folders in a FTP server, edit, copy, paste, move
+                                    or search them. You can synchronize folders on your computer with another folder on FTP
+                                    server. You can also stream videos (and subtitles) on FTP server if you have VLC Player,
+                                    without the need of downloading.
                                 </p>
+
+                                <a href="https://github.com/recoskyler/Paws" target="_blank">View/Download On GitHub</a>
                             </div>
 
                             <div class="projectSSC">
+                                <p>No Screenshots</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/todo.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>To-Do List</h2>
+
+                                <p>
+                                    This is a project I made to test and improve my ReactJS skills, after learning JavaScript and ReactJS.
+                                </p>
+
+                                <a href="https://github.com/recoskyler/to_do_list" target="_blank">View/Download On GitHub</a>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Screenshots</p>
                             </div>
                         </div>
                     </div>
