--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -111,6 +111,66 @@
                                 <p>No Screenshots</p>
                             </div>
                         </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/Honeycomb.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>HoneyComb</h2>
+
+                                <p>
+                                    This is a program that processes a complex calculation, then returns a statistical result. A friend of mine asked me to write
+                                    this program to help her with a project, which was published in a computer and maths
+                                    magazine.
+                                </p>
+
+                                <a href="https://github.com/recoskyler/HoneyComb" target="_blank">View/Download On GitHub</a>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Screenshots</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/smartcontrol.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Smart Room Control</h2>
+
+                                <p>
+                                    As a result of my laziness, I designed, and built an 'ATMEGA 328P-PU' (Arduino Processor) based room lamp control circuit.
+                                    I can turn on/off lamps in my room with a remote control, or set it to turn on or off
+                                    when someone comes in / goes out, using an ultrasonic distance sensor.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/macro.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>DSLR RGB Macro Ring Light</h2>
+
+                                <p>
+                                    Using a 'Adafruit NeoPixel 24 LED Ring' and an 'ATMEGA 328P-PU' (Arduino Processor), I designed and built a circuit which can control the color of each of the 24 LEDs independently, or in half (12 LEDs one color, 12 LEDs another color), quarter, full fashion.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
