Added attended events

--- a/Pages/attended.html
+++ b/Pages/attended.html
@@ -40,7 +40,213 @@
             <div id="bigCont">
                 <div id="cont">
                     <div id="main">
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/id-tech.jpg" alt="Project Image or Icon" />
+                            </div>
 
+                            <div class="projectSum">
+                                <h2>iD Tech Camp - Java Course - 2015</h2>
+
+                                <p>
+                                    I attended this Java programming language course, which took place at CalTech. I made a simple text editor as my final project.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <a href="../Images/id.jpg" target="_blank"><img class="projectSS" src="../Images/id.jpg"
+                                        alt="Screenshot" /></a>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/id-tech.jpg" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>iD Tech Camp - C++ Course - 2015</h2>
+
+                                <p>
+                                    I attended this C++ programming language course, after the Java course, which also took place at CalTech. I made a CLI (Command
+                                    Line Interface) based assistant.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <a href="../Images/id.jpg" target="_blank"><img class="projectSS" src="../Images/id.jpg"
+                                        alt="Screenshot" /></a>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/DMA.jpg" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Digital Media Academy - VR and Game Design Course - 2016</h2>
+
+                                <p>
+                                    At this course, I learnt how to develop games using Unity and C#, and make them compatible with VR headsets. As my final
+                                    project, I made a pinball game.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/firetech.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Fire Tech Camp - Web Development Course - 2016</h2>
+
+                                <p>
+                                    I learnt the basics of web development (HTML and CSS) at this course.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/techcamplondon.jpg" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Tech Camp London - Robotic Arm and Arduino Course - 2016</h2>
+
+                                <p>
+                                    I built a robotic arm kit, and programmed and Arduino to control the arm's servos.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/fll.jpg" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>First Lego League - 2016</h2>
+
+                                <p>
+                                    I was the co-programmer of my school's Lego robot.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/codefest.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>CodeFest TR - 2017</h2>
+
+                                <p>
+                                    Two of my friends and I attended this programming competition, as the representatives of our school (Terakki Foundry Private
+                                    Şişli Terakki Highschool).
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/frc.jpg" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>First Robotics Competition - 2018</h2>
+
+                                <p>
+                                    I took place in designing and building our school's robot for this competition.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <a href="../Images/frcss.jpg" target="_blank"><img class="projectSS" src="../Images/frcss.jpg"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/frcss2.jpg" target="_blank"><img class="projectSS" src="../Images/frcss2.jpg"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/frcss3.jpg" target="_blank"><img class="projectSS" src="../Images/frcss3.jpg"
+                                        alt="Screenshot" /></a>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/mufe.jpg" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>International Marmara Robot Olympics - Mini Sumo - 2018</h2>
+
+                                <p>
+                                    I attended this competiton as a competitor representing my school's team.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/shell-lg.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Shell Eco-marathon - 2018</h2>
+
+                                <p>
+                                    I took place in designing, building, and programming our school's car electronic systems.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/solvoyo.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Solvoyo Internship - 2018</h2>
+
+                                <p>
+                                    I was accepted to Solvoyo company, at Istanbul Technical University Tekno Kent, as an intern. I learnt the basics of Ruby, JavaScript, ReactJS, jQuery, SASS, and git.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
