--- a/Pages/attended.html
+++ b/Pages/attended.html
@@ -239,7 +239,8 @@
                                 <h2>Solvoyo Internship - 2018</h2>
 
                                 <p>
-                                    I was accepted to Solvoyo company, at Istanbul Technical University Tekno Kent, as an intern. I learnt the basics of Ruby, JavaScript, ReactJS, jQuery, SASS, and git.
+                                    I was accepted to Solvoyo company, at Istanbul Technical University Tekno Kent, as an intern. I learnt the basics of Ruby,
+                                    JavaScript, ReactJS, jQuery, SASS, and git.
                                 </p>
                             </div>
 
