--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -57,6 +57,12 @@
                                 <tr>
                                     <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA"><img src="../Images/mail.png"
                                             alt="E-Mail" class="contactImg"></td>
+                                    <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA" class="contactInf">atalayhamamcioglu@gmail.com</td>
+                                </tr>
+
+                                <tr>
+                                    <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA"><img src="../Images/mail.png"
+                                            alt="E-Mail" class="contactImg"></td>
                                     <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA" class="contactInf">recoskyler224@gmail.com</td>
                                 </tr>
 
