--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -171,6 +171,24 @@
                                 <p>No Pictures</p>
                             </div>
                         </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/rpi.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Raspberry Pi NAS Server</h2>
+
+                                <p>
+                                    I used a Raspberry Pi 3, 2 HDDs and an open-source software called Open Media Vault to make my own NAS (Network Attached Storage) server. I can now access all my files on the server from anywhere on the world, where there is internet of course. 
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <p>No Pictures</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
