--- a/Pages/about.html
+++ b/Pages/about.html
@@ -41,7 +41,49 @@
             <div id="bigCont">
                 <div id="cont">
                     <div id="main">
+                        <p id="aboutMe">
+                            My name is Adil Atalay Hamamcıoğlu, I was born in 16/06/2000 in Edirne, Turkey. In my free time, I write programs, make electronic
+                            projects using Arduino, sometimes play tennis, go to swimming, or take photos.
 
+                            <br/><br/> I had my primary school education at Private Edirne Collage. Then we moved to Istanbul,
+                            and I had my middle school education at Feyziye Mektepleri Foundation Private Işık School. When
+                            I was 13-14, I grew an interest in programming and electronics, with the influence of my computer
+                            engineer uncle, so I started learning lua in a modded game called Minecraft (with ComputerCraft
+                            mod), then with the help of my uncle I learnt Visual BASIC nad SQL PLUS. After middle school,
+                            I was accepted to Terakki Foundry Private Şişli Terakki High School. I chose programming club
+                            in prep grade, and learnt C# there. In 9th grade, I chose FLL (First Lego League) club, and helped
+                            to build and program our team's robot. Next year, I was accepted to IB (International Baccalaureate)
+                            program, but I had to opt out at the end of the year, as my school didn't let students choose
+                            lessons, and most of the universities (in computer engineering branch) did not accept students
+                            who have not took HL (High Level) Physics lesson. At the end of the 11th grade, I had an interview
+                            with the company Solvoyo about internship, and I was accepted. At the end of the summer, I worked
+                            there as an Intern for 20 days. Throughout my middle and high school years, I learnt German and
+                            English, and in high school I attended multiple courses and competitions, which you can learn
+                            about <a id="alink" href="./attended.html">here</a>.
+
+                            <br/><br/> Now I'm planning to be a computer engineer/cyber-security engineer, with essential
+                            electronics knowledge, as I think these jobs have a bright future, and have a growing need for
+                            skilled employees.
+                        </p>
+
+                        <h3>Programming (and markup) Languages I Know:</h3>
+
+                        <ul id="pl">
+                            <li>Java</li>
+                            <li>C++</li>
+                            <li>C#</li>
+                            <li>VB.net (Visual BASIC)</li>
+                            <li>Python</li>
+                            <li>JavaScript</li>
+                            <li>lua</li>
+                            <li>Micro C</li>
+                            <li>Ruby</li>
+                            <li>jQuery</li>
+                            <li>SASS (~Markup)</li>
+                            <li>ReactJS</li>
+                            <li>HTML (Markup)</li>
+                            <li>CSS (Markup)</li>
+                        </ul>
                     </div>
                 </div>
             </div>
