--- a/Pages/attended.html
+++ b/Pages/attended.html
@@ -167,7 +167,8 @@
                             </div>
 
                             <div class="projectSSC">
-                                <p>No Pictures</p>
+                                <a href="../Images/cf.jpg" target="_blank"><img class="projectSS" src="../Images/cf.jpg"
+                                    alt="Screenshot" /></a>
                             </div>
                         </div>
 
