Edited about me

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -42,8 +42,8 @@
                 <div id="cont">
                     <div id="main">
                         <p id="aboutMe">
-                            My name is Adil Atalay Hamamcıoğlu, I was born in 16/06/2000 in Edirne, Turkey. In my free time, I write programs, make electronic
-                            projects using Arduino, sometimes play tennis, go to swimming, or take photos.
+                            My name is Adil Atalay Hamamcıoğlu, I was born in 16/06/2000 in Edirne, Turkey. In my free time, I read books, write programs, make electronic
+                            projects using Arduino, I sometimes play tennis, go to swimming, or take photos.
 
                             <br/><br/> I had my primary school education at Private Edirne Collage. Then we moved to Istanbul,
                             and I had my middle school education at Feyziye Mektepleri Foundation Private Işık School. When
