--- a/Pages/attended.html
+++ b/Pages/attended.html
@@ -130,7 +130,8 @@
                             </div>
 
                             <div class="projectSSC">
-                                <p>No Pictures</p>
+                                <a href="../Images/tcl.jpg" target="_blank"><img class="projectSS" src="../Images/tcl.jpg"
+                                    alt="Screenshot" /></a>
                             </div>
                         </div>
 
