--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -101,14 +101,19 @@
                                 <h2>To-Do List</h2>
 
                                 <p>
-                                    This is a project I made to test and improve my ReactJS skills, after learning JavaScript and ReactJS.
+                                    This is a project I made to test and improve my ReactJS skills, after learning JavaScript and ReactJS. I used Google Firebase to keep all the user info, and user tasks online.
                                 </p>
 
                                 <a href="https://github.com/recoskyler/to_do_list" target="_blank">View/Download On GitHub</a>
                             </div>
 
                             <div class="projectSSC">
-                                <p>No Screenshots</p>
+                                <a href="../Images/todoss.png" target="_blank"><img class="projectSS" src="../Images/todoss.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/todoss1.png" target="_blank"><img class="projectSS" src="../Images/todoss1.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/todoss2.png" target="_blank"><img class="projectSS" src="../Images/todoss2.png"
+                                        alt="Screenshot" /></a>
                             </div>
                         </div>
 
@@ -163,7 +168,9 @@
                                 <h2>DSLR RGB Macro Ring Light</h2>
 
                                 <p>
-                                    Using a 'Adafruit NeoPixel 24 LED Ring' and an 'ATMEGA 328P-PU' (Arduino Processor), I designed and built a circuit which can control the color of each of the 24 LEDs independently, or in half (12 LEDs one color, 12 LEDs another color), quarter, full fashion.
+                                    Using a 'Adafruit NeoPixel 24 LED Ring' and an 'ATMEGA 328P-PU' (Arduino Processor), I designed and built a circuit which
+                                    can control the color of each of the 24 LEDs independently, or in half (12 LEDs one color,
+                                    12 LEDs another color), quarter, full fashion.
                                 </p>
                             </div>
 
@@ -181,7 +188,9 @@
                                 <h2>Raspberry Pi NAS Server</h2>
 
                                 <p>
-                                    I used a Raspberry Pi 3, 2 HDDs and an open-source software called Open Media Vault to make my own NAS (Network Attached Storage) server. I can now access all my files on the server from anywhere on the world, where there is internet of course. 
+                                    I used a Raspberry Pi 3, 2 HDDs and an open-source software called Open Media Vault to make my own NAS (Network Attached
+                                    Storage) server. I can now access all my files on the server from anywhere on the world,
+                                    where there is internet of course.
                                 </p>
                             </div>
 
