Added attended event

--- a/Pages/attended.html
+++ b/Pages/attended.html
@@ -141,15 +141,34 @@
                             </div>
 
                             <div class="projectSum">
-                                <h2>First Lego League - 2016</h2>
+                                <h2>First Lego League - 2013 - 2016</h2>
 
                                 <p>
-                                    I was the co-programmer of my school's Lego robot.
+                                    In 2013, I was in the building team, while in 2016 I was the co-programmer of my school's Lego robot.
                                 </p>
                             </div>
 
                             <div class="projectSSC">
                                 <p>No Pictures</p>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
+                                <img class="projectIcon" src="../Images/maker.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Maker Faire - 2017</h2>
+
+                                <p>
+                                    I attended Maker Faire Istanbul with my DSLR RGB Macro Ring Light, which you can learn more about <a href="projects.html">here</a>.
+                                </p>
+                            </div>
+
+                            <div class="projectSSC">
+                                <a href="../Images/cf.jpg" target="_blank"><img class="projectSS" src="../Images/cf.jpg"
+                                    alt="Screenshot" /></a>
                             </div>
                         </div>
 
