--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -51,7 +51,7 @@
 
                                 <tr>
                                     <td><img src="../Images/phone.png" alt="Phone Number" class="contactImg"></td>
-                                    <td class="contactInf">+90 532 558 5839</td>
+                                    <td class="contactInf">+90 532 558 58 39</td>
                                 </tr>
 
                                 <tr>
