--- a/Pages/attended.html
+++ b/Pages/attended.html
@@ -167,8 +167,7 @@
                             </div>
 
                             <div class="projectSSC">
-                                <a href="../Images/cf.jpg" target="_blank"><img class="projectSS" src="../Images/cf.jpg"
-                                    alt="Screenshot" /></a>
+                                <p>No Pictures</p>
                             </div>
                         </div>
 
