--- a/Pages/about.html
+++ b/Pages/about.html
@@ -72,6 +72,8 @@
                             <li>Java</li>
                             <li>C++</li>
                             <li>C#</li>
+                            <li>C</li>
+                            <li>Dart</li>
                             <li>VB.net (Visual BASIC)</li>
                             <li>Python</li>
                             <li>JavaScript</li>
