--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -51,7 +51,7 @@
 
                                 <tr>
                                     <td><img src="../Images/phone.png" alt="Phone Number" class="contactImg"></td>
-                                    <td class="contactInf">+90 532 558 58 39</td>
+                                    <td class="contactInf">+90 532 558 58 39 or +372 569997923</td>
                                 </tr>
 
                                 <tr>
@@ -78,9 +78,6 @@
                                     <td class="contactInf"><a target="_blank" href="https://github.com/recoskyler">recoskyler</a></td>
                                 </tr>
                             </table>
-
-                            <p style="font-style: italic; color:#F50057">If you are having difficulty pronouncing my name,
-                                you can just call me 'Curlyman'. </p>
                         </div>
                     </div>
                 </div>
