--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -43,6 +43,39 @@
                     <div id="main">
                         <div class="project">
                             <div>
+                                <img class="projectIcon" src="../Images/budget-icon.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Budget</h2>
+
+                                <p>
+                                    Budget is a mobile app, which you can use to manage your monthly budget, your fixed payments, and rent/utilities. After 
+                                    I failed to find an easy to use app that doesn't have too many functions that make it difficult to use, I decided to make this app.
+                                    It's currently in internal beta, but I'm planning to release it soon. 
+                                </p>
+
+                                <a href="https://github.com/recoskyler/Budget" target="_blank">View On GitHub</a>
+                            </div>
+
+                            <div class="projectSSC">
+                                <a href="../Images/budgetSS1.png" target="_blank"><img class="projectSS" src="../Images/budgetSS1.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/budgetSS2.png" target="_blank"><img class="projectSS" src="../Images/budgetSS2.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/budgetSS3.png" target="_blank"><img class="projectSS" src="../Images/budgetSS3.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/budgetSS4.png" target="_blank"><img class="projectSS" src="../Images/budgetSS4.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/budgetSS5.png" target="_blank"><img class="projectSS" src="../Images/budgetSS5.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/budgetSS6.png" target="_blank"><img class="projectSS" src="../Images/budgetSS6.png"
+                                        alt="Screenshot" /></a>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
                                 <img class="projectIcon" src="../Images/sabertooth-ICON.png" alt="Project Image or Icon" />
                             </div>
 
