--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 					<div id="main">
 						<p id="homeText">
 							This is my personal website, where I introduce myself, tell you about my personal and school projects, describe the events
-							(such as competitions and courses) I attended, and where I give you my contact info incase you want to contact me
-							about something.
+							(such as competitions and courses) I attended.
 						</p>
 					</div>
 				</div>
