--- a/Pages/about.html
+++ b/Pages/about.html
@@ -61,17 +61,19 @@
                             English, and in high school I attended multiple courses and competitions, which you can learn
                             about <a id="alink" href="./attended.html">here</a>.
 
-                            <br/><br/> Now I'm planning to be a computer engineer/cyber-security engineer, with essential
-                            electronics knowledge, as I think these jobs have a bright future, and have a growing need for
-                            skilled employees.
+                            <br/><br/>
+                            
+                            Right now, I'm studying cyber security engineering at Tallinn University Of Technology.
                         </p>
 
                         <h3>Programming (and markup) Languages I Know:</h3>
 
                         <ul id="pl">
+                            <li>Dart</li>
                             <li>Java</li>
                             <li>C++</li>
                             <li>C#</li>
+                            <li>C</li>
                             <li>VB.net (Visual BASIC)</li>
                             <li>Python</li>
                             <li>JavaScript</li>
